java-common (0.35) UNRELEASED; urgency=low

  * Added myself to Uploaders.
  * Added myself to the list of Authors of the Java Policy.
  * Applied minor corrections to the Java Policy.

 -- Niels Thykier <niels@thykier.net>  Fri, 26 Mar 2010 21:44:45 +0100

java-common (0.34) unstable; urgency=low

  * Build a default-jdk-doc package to make the documentation available
    in a path (/usr/share/doc/default-jdk/api) independent of the depending
    package.

 -- Matthias Klose <doko@debian.org>  Fri, 11 Dec 2009 06:22:35 +0100

java-common (0.33) unstable; urgency=low

  [ Matthias Klose ]
  * Set package sections to java.

  [ Torsten Werner ]
  * Add myself to Uploaders.
  * Add a local copy of debian-java-faq to avoid network (CVS) access during
    build time.
  * Sync with Ubuntu:
    - Switch to OpenJDK as the default JDK/JRE.
  * Update Standards-Version: 3.8.2:
    - Add Vcs headers to debian/control.

 -- Torsten Werner <twerner@debian.org>  Thu, 30 Jul 2009 15:16:06 +0200

java-common (0.32) unstable; urgency=low

  * Build the default-* packages on hppa.

 -- Matthias Klose <doko@debian.org>  Sun, 17 May 2009 23:21:22 +0200

java-common (0.31) unstable; urgency=low

  * Build the default-* packages on alpha again.

 -- Matthias Klose <doko@debian.org>  Sun, 01 Feb 2009 12:41:46 +0100

java-common (0.30ubuntu5) karmic; urgency=low

  * default-jdk-builddep: Depend on gcj-jdk instead of java-gcj-compat-dev.
  * Build for hppa.

 -- Matthias Klose <doko@ubuntu.com>  Mon, 27 Apr 2009 13:36:36 +0200

java-common (0.30ubuntu4) jaunty; urgency=low

  * Default to openjdk-6 on armel.

 -- Matthias Klose <doko@ubuntu.com>  Mon, 17 Nov 2008 08:03:21 +0100

java-common (0.30ubuntu3) intrepid; urgency=low

  * On powerpc, default back to openjdk-6 instead of cacao-oj6. Still
    more testsuite failures in the OpenJDK testsuite with cacao compared
    to the zero port. 

 -- Matthias Klose <doko@ubuntu.com>  Mon, 13 Oct 2008 18:09:39 +0000
