@@ -2,7 +2,8 @@ java-common (0.35) UNRELEASED; urgency=low
 
   * Added myself to Uploaders.
   * Added myself to the list of Authors of the Java Policy.
-  * Applied minor corrections to the Java Policy.
+  * Integrated adapted parts of the FOSDEM06 proposal into the Java
+    Policy.
 
  -- Niels Thykier <niels@thykier.net>  Fri, 26 Mar 2010 21:44:45 +0100
 
